# middleware-py

./: .env.example  Dockerfile  LICENSE  OPUS_4.6__.md  README.md  V1_IMPLEMENTATION_PLAN.md  WALKTHROUGH.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  health.py  webhook.py
app/clients/: evolution.py  glpi.py
app/core/: config.py  database.py
app/models/: conversation.py
app/repositories/: conversation.py
app/schemas/: glpi.py  webhook.py
app/services/: flow_engine.py  session.py
tests/: conftest.py
tests/integration/: conftest.py  test_evolution_integration.py  test_glpi_integration.py  test_webhook_flow.py
tests/unit/: test_evolution_client.py  test_flow_engine.py  test_glpi_client.py  test_session.py  test_webhook.py
